fix: Correction complète des erreurs de build et déploiement
- Suppression des imports ES6 problématiques (seo-config.js, performance-config.js, accessibility-config.js, config.js)
- Création d'app-config.js simple et fonctionnel
- Ajout de build.ps1 pour build PowerShell compatible
- Configuration Netlify optimisée avec commande PowerShell
- Correction de l'erreur terser en utilisant esbuild
- Scripts de build alternatifs (Node.js et PowerShell)
- Documentation de déploiement complète (Netlify et GitHub Pages)
- Build testé et fonctionnel - prêt pour déploiement

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "main": "index.html",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "powershell -ExecutionPolicy Bypass -File build.ps1",
+    "build:node": "node build.js",
+    "build:vite": "vite build",
     "preview": "vite preview",
     "start": "python -m http.server 8000",
     "serve": "npx serve .",
@@ -54,7 +56,8 @@
     "not ie 11"
   ],
   "devDependencies": {
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "terser": "^5.24.0"
   },
   "dependencies": {}
 }
