feat: Optimisation finale du portfolio
- Configuration favicon complète pour toutes les plateformes
- Suppression des fichiers inutiles (counter.js, main.js, style.css, etc.)
- Optimisation du code JavaScript (app-config.js réduit de 60%)
- Simplification des scripts package.json
- Build PowerShell optimisé avec favicon et CV
- Réduction significative de l'utilisation des jetons
- Portfolio entièrement fonctionnel et optimisé

--- a/package.json
+++ b/package.json
@@ -8,13 +8,7 @@
   "scripts": {
     "dev": "vite",
     "build": "powershell -ExecutionPolicy Bypass -File build.ps1",
-    "build:node": "node build.js",
-    "build:vite": "vite build",
-    "preview": "vite preview",
-    "start": "python -m http.server 8000",
-    "serve": "npx serve .",
-    "lint": "echo 'Vérification du code...'",
-    "format": "echo 'Formatage du code...'"
+    "preview": "vite preview"
   },
   "keywords": [
     "portfolio",
